--- a/index.html
+++ b/index.html
@@ -2,15 +2,21 @@
 <html>
   <head>
     <title>Son Hom</title>
+    
     <meta charset="utf-8">
   </head>
 
   <body>
     <h1>My name is Son Hom</h1>
-    <h2>Student</h2>
+    <h2>I am a Student</h2>
     <figure>
       <img src="images/Picture15.jpg" alt="Son Hom">
       <figcaption> Son Hom </figcaption>
     </figure>
+
+    <p>My name is Son Hom.</p>
+    <p>I am 19 years old.</p>
+    <p>I am from Siem Reap province.</p>
+    <p>I am study in  Phnom Penh since 2018 years.</p>
   </body>
 </html>
