--- a/index.html
+++ b/index.html
@@ -18,5 +18,11 @@
     <p>I am 19 years old.</p>
     <p>I am from Siem Reap province.</p>
     <p>I am study in  Phnom Penh since 2018 years.</p>
+    <p>The 4 people I like are:</p>
+
+    <button type="button" class="button-people">Pich Sophea</button>
+    <button type="button" class="button-people">Keo Pich Pisey</button>
+    <button type="button" class="button-people">Thul Rithy</button>
+    <button type="button" class="button-people">Dy Saveth</button>
   </body>
 </html>
