--- a/index.html
+++ b/index.html
@@ -4,11 +4,13 @@
     <title>Son Hom</title>
     
     <meta charset="utf-8">
+
+    
   </head>
 
   <body>
     <h1>My name is Son Hom</h1>
-    <h2>I am a Student</h2>
+    <h2> Student</h2>
     <figure>
       <img src="images/Picture15.jpg" alt="Son Hom">
       <figcaption> Son Hom </figcaption>
@@ -24,5 +26,7 @@
     <button type="button" class="button-people">Keo Pich Pisey</button>
     <button type="button" class="button-people">Thul Rithy</button>
     <button type="button" class="button-people">Dy Saveth</button>
+
+    <script src="js/index.js" type="text/javascript" defer="defer"></script>
   </body>
 </html>
